<resources>
    <string name="app_name">Chatty</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="buttonPushPasswordChange">If you push this button you will get an e-mail to change your password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_write">Write here...</string>
    <string name="search">Search...</string>
    <string name="title_activity_maps">Map</string>
    <string name="display">Display on the map by tapping</string>
    <string name="full_name">Full name</string>
    <string name="take_a_picture">Take a picture!</string>
    <string name="open_gallery">Open gallery!</string>
    <string name="tx_full_name">Full name:</string>
    <string name="hometown">Hometown</string>
    <string name="save">Save</string>
    <string name="adding_friend">Adding friend</string>
    <string name="deleting_friend">Deleting friend</string>
    <string name="who_can_see_personal_datas">Who can see personal datas:</string>
</resources>
