<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:id="@+id/relativelayout"
    tools:context=".ResetPasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>

    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/resetpass" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_marginTop="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/send_email"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal"
            android:hint="@string/email" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_reset"
            android:text="@string/send"
            android:textColor="@color/textColor"
            android:background="@drawable/buttonbckground"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/buttonPushPasswordChange"/>
    </LinearLayout>


</RelativeLayout>